<resources>
    <string name="app_name">Doctobook</string>
    <string name="action_settings">Ustawienia</string>
    <string name="patientName">Pacjent</string>
    <string name="date">Data</string>
    <string name="procedure">Procedura</string>
    <string name="amount">Kwota</string>
    <string name="save">Zapisz</string>
    <string name="point">Punkty</string>
    <string name="prosthetics">Protetyka</string>
    <string name="endodontics">Endodoncja</string>
    <string name="conservative">Zachowawcza</string>
    <string name="alertWrongDateFormat">Zła data dd-mm-yyyy</string>
    <string name="alertInfoOfficeInserted">Gabinet dodany</string>
    <string name="alertInfoVisitInserted">Wizyta zapisana</string>
    <string name="alertInfoVisitUpdated">Wizyta zaktualizowana</string>
    <string name="alertInfoVisitDeleted">Wizyta została usunięta</string>
    <string name="alertInfoOfficeDeleted">Gabinet został usunięty!</string>
    <string name="alertWrongVisitNotInserted">Wizyta NIE została zapisana!</string>
    <string name="alertWrongOfficeNotInserted">Gabinet NIE został dodany!</string>
    <string name="update">Aktualizuj</string>
    <string name="officeName">Gabinet</string>
    <string name="provision">Prowizja</string>
    <string name="commissionPublic">Publiczne</string>
    <string name="commissionPrivate">Prywatne</string>
    <string name="nfzConversion">Przelicznik NFZ</string>
    <string name="choseOffice">Wybierz gabinet:</string>
    <string name="addNewOffice">Dodaj nowy...</string>
    <string name="alertInfoOfficeUpdated">Gabinet zaktualizowany</string>
    <string name="alertWrongOfficeNotUpdated">Gabinet NIE został zaktualizowany!</string>
    <string name="remove">Usuń</string>
    <string name="extraCosts">Dodatkowe koszty</string>
    <string name="chooseMonth">Wybierz miesiąc:</string>
    <string name="action_summary">Podsumowanie</string>
    <string name="myGain">Mój zysk:</string>
    <string name="pointsForOfficeByMonth">w tym punktów NFZ:</string>
    <string name="RemoveVisit">Usuń wizytę</string>
    <string name="AreYouSure">Jesteś tego pewien?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="myGainAllOffice">Wszystkie gabinety:</string>
    <string name="exportDatabase">Export DB</string>
    <string name="importDatabase">Import DB</string>
    <string name="alertInfoDatabaseWasExported">Wyeksportowano</string>
    <string name="alertInfoDatabaseWasImported">Zaimportowano!</string>
</resources>
