<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginTop="15dp"
                android:text="@string/patientName" />

            <EditText
                android:id="@+id/etPatientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="4dp"
                android:text="@string/procedure" />

            <CheckBox
                android:id="@+id/cbProsthetics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prosthetics" />

            <CheckBox
                android:id="@+id/cbEndodontics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endodontics" />

            <CheckBox
                android:id="@+id/cbConservative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conservative" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:text="@string/date" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:text="@string/amount" />

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:text="@string/point" />

                <EditText
                    android:id="@+id/etPoint"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btAddVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right"
            android:layout_marginTop="20dp"
            android:text="@string/save" />

    </LinearLayout>
</LinearLayout>