<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <include layout="@layout/office_fields_layout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btDeleteOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />

            <Button
                android:id="@+id/btUpdateOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exportDatabase"
                android:id="@+id/btExportDatabase"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:singleLine="true" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importDatabase"
                android:id="@+id/btImportDatabase"
                android:layout_gravity="bottom"
                android:gravity="bottom" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>